Refactored to use specific document builders. Added more documentation. Cleanup. Added testing config for running against the output of the twitter source connector.

--- a/config/cloudsolr.properties
+++ b/config/cloudsolr.properties
@@ -16,9 +16,11 @@
 
 name=cloudsolr
 topics=twitter
-tasks.max=2
+tasks.max=10
 connector.class=com.github.jcustenborder.kafka.connect.solr.CloudSolrSinkConnector
-solr.zookeeper.hosts=192.168.99.100:2181
+solr.zookeeper.hosts=zookeeper:2181
 solr.collection.name=twitter
 solr.commit.within=1000
-
+transforms=prune
+transforms.prune.type=org.apache.kafka.connect.transforms.ReplaceField$Value
+transforms.prune.whitelist=CreatedAt,Id,Text,Source,Truncated
