--- a/pom.xml
+++ b/pom.xml
@@ -98,7 +98,7 @@
                                 <tag>Apache Solr</tag>
                                 <tag>search</tag>
                             </tags>
-                            <title>Kafka Connect Spooldir</title>
+                            <title>Kafka Connect Solr</title>
                             <supportUrl>${pom.issueManagement.url}</supportUrl>
                             <supportSummary>Support provided through community involvement.
                             </supportSummary>
